[project]
name = "thegaffer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.124.2",
    "ollama>=0.6.1",
    "pandas>=2.3.3",
    "streamlit>=1.52.2",
    "torch>=2.6.0",
    "transformers>=4.57.3",
    "uvicorn>=0.38.0",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true  # <--- This is the magic setting. It stops "markupsafe" from leaking in.

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }
